--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=https://gopark-be-production.up.railway.app
+NEXT_PUBLIC_API_URL=https://gopark-be.up.railway.app
 OUR_ACCESS_KEY_HERE=b19fe6de-12a8-4d61-b749-e617b5b2b5cd
