--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "recharts": "^3.0.2",
     "sonner": "^2.0.6",
