--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "pdfkit": "^0.17.1",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.18",
     "recharts": "^3.0.2",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1"
