--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.0",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "next-auth": "^4.24.11",
     "pdfkit": "^0.17.1",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
