--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.0",
     "jwt-decode": "^4.0.0",
+    "keen-slider": "^6.8.6",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.525.0",
@@ -40,6 +41,7 @@
     "react-qr-code": "^2.0.18",
     "recharts": "^3.0.2",
     "sonner": "^2.0.6",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
