--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jwt-decode": "^4.0.0",
     "keen-slider": "^6.8.6",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
