--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
@@ -29,6 +30,7 @@
     "leaflet-routing-machine": "^3.2.12",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.525.0",
+    "mongoose": "^8.16.3",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "pdfkit": "^0.17.1",
