--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^8.16.3",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "pdfkit": "^0.17.1",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
