--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.18",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.0.2",
     "sonner": "^2.0.6",
     "swiper": "^11.2.10",
