--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "recharts": "^3.0.2",
     "sonner": "^2.0.6",
     "swiper": "^11.2.10",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
