--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "framer-motion": "^12.23.6",
+    "framer-motion": "^12.23.12",
     "jwt-decode": "^4.0.0",
     "keen-slider": "^6.8.6",
     "leaflet": "^1.9.4",
@@ -45,6 +45,7 @@
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-qr-code": "^2.0.18",
     "react-toastify": "^11.0.5",
     "recharts": "^3.0.2",
