--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lodash.debounce": "^4.0.8",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.3",
     "next": "15.3.4",
