--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@reduxjs/toolkit": "^2.11.0",
     "antd": "^5.26.4",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
@@ -52,6 +53,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
     "react-qr-code": "^2.0.18",
+    "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.0.2",
     "sonner": "^2.0.6",
