--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -35,18 +35,19 @@
     "leaflet-routing-machine": "^3.2.12",
     "lodash.debounce": "^4.0.8",
     "lottie-react": "^2.4.1",
+    "lottie-web": "^5.13.0",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.3",
-    "next": "15.3.4",
+    "next": "^16.0.8",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "pdfkit": "^0.17.1",
     "qs": "^6.14.0",
-    "react": "^19.0.0",
+    "react": "^19.2.1",
     "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-datepicker": "^8.4.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.1",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
@@ -59,7 +60,8 @@
     "sonner": "^2.0.6",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
-    "tesseract.js": "^6.0.1"
+    "tesseract.js": "^6.0.1",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -67,10 +69,11 @@
     "@types/leaflet": "^1.9.19",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.2.7",
     "@types/react-dom": "^19",
+    "cross-env": "^10.1.0",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "^16.0.8",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
